--- a/tournamentbel-web/src/main/webapp/Test.html
+++ b/tournamentbel-web/src/main/webapp/Test.html
@@ -5,11 +5,22 @@
     <title>Title</title>
 </head>
 <body>
-<form action = "MyServlet">
-    Имя <input type = "text" name = "firstName">
-    Фамилия <input type = "text" name = "lastName">
-    <input type = "submit" name = "Отправить данные">
+<form method = "POST", action = "MyServlet">
+    <table>
+        <tr>
+        <td>Имя:</td>
+            <td><input type = "text" name = "firstName"></td>
+        </tr>
 
+        <tr>
+            <td>Фамилия :</td>
+            <td><input type = "text" name = "lastName"></td>
+        </tr>
+
+        <tr>
+            <td align="right" colspan="2"><input type = "submit" name = "Отправь"></td>
+        </tr>
+    </table>
 </form>
 </body>
 </html>
