--- a/tournamentbel-web/src/main/webapp/Test.html
+++ b/tournamentbel-web/src/main/webapp/Test.html
@@ -5,20 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-<form method = "POST", action = "MyServlet">
+<form method = "GET", action = "MyServlet">
     <table>
         <tr>
-        <td>Имя:</td>
-            <td><input type = "text" name = "firstName"></td>
+        <td>NumberOne:</td>
+            <td><input type = "number" name = "firstNumber"></td>
         </tr>
 
         <tr>
-            <td>Фамилия :</td>
-            <td><input type = "text" name = "lastName"></td>
+            <td>NumberTwo :</td>
+            <td><input type = "number" name = "secondNumber"></td>
         </tr>
 
         <tr>
-            <td align="right" colspan="2"><input type = "submit" name = "Отправь"></td>
+            <td align="right" colspan="2"><input type = "submit" value = "Сложить"></td>
         </tr>
     </table>
 </form>
