added some jsp files

--- a/tournamentbel-web/src/main/webapp/Test.html
+++ b/tournamentbel-web/src/main/webapp/Test.html
@@ -74,5 +74,15 @@
         </tr>
     </table>
 </form>
+
+<form method = "GET" action = "ServletStat">
+    <table>
+        <tr>
+            <td align="right" colspan="2"><input type = "submit" value = "Статистика матчей"></td>
+
+        </tr>
+    </table>
+</form>
+
 </body>
 </html>
